--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,38 @@
 plugins {
-    id('groovy')
+    // メソッド呼び出し
+    id("groovy")
 }
+// 名前付き引数
+apply(plugin: "application")
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+// =でプロパティに値を代入する
+mainClassName = "sample.Main"
+// is identical to
+// this.project.maneClassName = "sample.Main"
+
+group = "org.example"
+version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation('org.apache.groovy:groovy:4.0.2')
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.1')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
+    implementation("org.apache.groovy:groovy:4.0.4")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
 }
+
+//　ドット区切りでオブジェクトのプロパティを参照
+startScripts.applicationName = "sample"
 
 test {
     useJUnitPlatform()
 }
+
+// これはくどいなあ。originalの方がいい。
+task(myTask, {
+    doLast({
+        println("my task")
+    })
+})
